@@ -38,7 +38,7 @@ USER jboss
 ENV JAVA_HOME /usr/lib/jvm/java
 
 # Set the WILDFLY_VERSION env variable
-ENV WILDFLY_VERSION 9.0.2.Final
+ENV WILDFLY_VERSION 8.2.1.Final
 
 # Add the WildFly distribution to /opt, and make wildfly the owner of the extracted tar content
 # Make sure the distribution is available from a well-known place
@@ -51,7 +51,8 @@ ENV JBOSS_HOME /opt/jboss/wildfly
 #RUN /opt/jboss/wildfly/bin/add-user.sh admin Pass#3556 --silent
 
 # Increasing Initial heap size & Maximum heap size
-RUN sed -i -- 's/JAVA_OPTS="-Xms64m -Xmx512m -XX:MaxPermSize=256m/JAVA_OPTS="-Xms2048m -Xmx4096m/g' /opt/jboss/wildfly/bin/standalone.conf
+RUN sed -i -- 's/JAVA_OPTS="-Xms64m -Xmx512m -XX:MaxPermSize=256m/JAVA_OPTS="-Xms2048m -Xmx4096m -XX:PermSize=32m -XX:MaxPermSize=512m/g' /opt/jboss/wildfly/bin/standalone.conf
+RUN echo  "JAVA_OPTS=\"\$JAVA_OPTS -Xss2m -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled\"" >> /opt/jboss/wildfly/bin/standalone.conf
 
 # Enable binding to all network interfaces and debugging inside the EAP
 RUN echo "JAVA_OPTS=\"\$JAVA_OPTS -Djboss.bind.address=0.0.0.0 -Djboss.bind.address.management=0.0.0.0\"" >> /opt/jboss/wildfly/bin/standalone.conf
